# python-nr.util

./: .gitignore  package.yml  pyproject.toml  readme.md  setup.py
.changelog/: 0.2.0.toml  0.2.0.yml  0.2.1.toml  0.2.1.yml  0.3.0.toml  0.3.0.yml  0.3.1.toml  0.3.1.yml  0.4.0.toml  0.4.0.yml  0.4.1.toml  0.4.1.yml  0.4.2.toml  0.4.2.yml  0.4.3.toml  0.4.3.yml  0.4.4.toml  0.4.4.yml  0.4.5.toml  0.4.5.yml  0.4.6.toml  0.4.7.toml  0.4.7.yml  0.5.0.toml  0.6.0.toml  0.6.1.toml  0.6.2.toml  0.6.3.toml  0.6.4.toml  0.6.5.toml  0.6.6.toml  0.6.7.toml  0.7.0.toml  0.7.1.toml  0.7.2.toml  0.7.3.toml  0.7.4.toml  0.7.5.toml  0.7.6.toml  0.8.0.toml  (+14 more)
.github/workflows/: python-package.yml
src/nr/util/: __init__.py  scanner.py
src/nr/util/digraph/: _digraph.py
src/test/: test_nr_util_algorithm_longest_common_substring.py  test_nr_util_chaindict.py  test_nr_util_digraph_algorithm.py  test_nr_util_keyvalue_sqlite.py  test_nr_util_parsing_rules.py  test_nr_util_scanner.py
test/: test_import.py  test_nr_util_chaindict.py  test_nr_util_digraph.py  test_nr_util_digraph_algorithm.py  test_nr_util_keyvalue_sqlite.py  test_nr_util_orderedset.py  test_nr_util_parsing_scanner.py  test_nr_util_parsing_tokenizer.py  test_nr_util_proxy.py  test_nr_util_re.py  test_nr_util_stream.py
test/nr/url/: test_url.py
test/nr/util/: test_chaindict.py  test_orderedset.py  test_proxy.py  test_re.py
test/nr_util_date/: samples.py  test_iso8601.py
test/nr_util_digraph/: test_algorithm.py
test/nr_util_parsing/: test_scanner.py  test_tokenizer.py
test/nr_util_typehints/: test_parser.py
(+27 files in other folders)
