[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nr.util"
authors = [{name = "Niklas Rosenstein", email = "rosensteinniklas@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = "~=3.8"

[project.urls]
Home = "https://github.com/NiklasRosenstein/python-nr.util"

[tool.mypy]
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_context = true
show_error_codes = true
